Xcode: Framework search paths no longer set with 3.25rc3
CMakeLists to reproduce the issue. CMakeSwiftFramework.zip
Basically two swift frameworks where Foo
is depending on Bar
. With 3.25rc2 defining the target_include_directories
of each to their own $<TARGET_BUNDLE_DIR:…>
results in the FRAMEWORK_SEARCH_PATH
of Foo
being correctly set to the …/build/Bar/Debug
folder.
When using 3.25rc3 this is no longer the case and FRAMEWORK_SEARCH_PATH
of Foo
is empty.
Note:
This happens only if the targets are added via add_subdirectory
since that results in each target having their own build folder (e.g. build/Foo/Debug
and build/Bar/Debug
). If all targets are declared in one file it works since everything just builds to build/Debug
but that is not a real world use case.